alignment issue fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-/* #root {
-  max-width: 1280px;
+ #root {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  width: 100%;
 }
-
+/*
 .logo {
   height: 6em;
   padding: 1.5em;
